force-app/main/default/objects/Case/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>To track DueDate/Follow-up action with the owner/ customer</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>