force-app/main/default/objects/Case/fields/Effort_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimate__c</fullName>
    <description>Used for Feature request cases</description>
    <label>Effort Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>