force-app/main/default/objects/Case/fields/Elastix_Agent_Extension__c.field-meta.xml
<CustomField>
    <fullName>Elastix_Agent_Extension__c</fullName>
    <label>Elastix Agent Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>