force-app/main/default/objects/Case/fields/EmailToAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailToAddress__c</fullName>
    <label>EmailToAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>