force-app/main/default/objects/Case/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carriage</fullName>
            </value>
            <value>
                <fullName>Clickdelivery</fullName>
            </value>
            <value>
                <fullName>Damejidlo</fullName>
            </value>
            <value>
                <fullName>Delivery Hero Germany</fullName>
            </value>
            <value>
                <fullName>Delivery Hero Holding</fullName>
            </value>
            <value>
                <fullName>Donesi</fullName>
            </value>
            <value>
                <fullName>eFood</fullName>
            </value>
            <value>
                <fullName>Foodpanda</fullName>
            </value>
            <value>
                <fullName>Foodpanda-RO</fullName>
            </value>
            <value>
                <fullName>Foodora-FI</fullName>
            </value>
            <value>
                <fullName>Foodora-NO</fullName>
            </value>
            <value>
                <fullName>Foodora-SE</fullName>
            </value>
            <value>
                <fullName>hipMenu</fullName>
            </value>
            <value>
                <fullName>HungerStation</fullName>
            </value>
            <value>
                <fullName>Hungryhouse</fullName>
            </value>
            <value>
                <fullName>Mjam</fullName>
            </value>
            <value>
                <fullName>Netpincer</fullName>
            </value>
            <value>
                <fullName>Onlinepizza.se</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pandora</fullName>
            </value>
            <value>
                <fullName>PedidosYa</fullName>
            </value>
            <value>
                <fullName>Pizza.hu</fullName>
            </value>
            <value>
                <fullName>Pizza-online.fi</fullName>
            </value>
            <value>
                <fullName>Talabat</fullName>
            </value>
            <value>
                <fullName>Yemeksepeti</fullName>
            </value>
            <value>
                <fullName>Yogiyo</fullName>
            </value>
            <value>
                <fullName>PedidosJa</fullName>
                <isActive>false</isActive>
                <label>PedidosJa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>