force-app/main/default/objects/Case/fields/Escalated_To_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Level_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For AU reporting for cases escalated by offshore team to Level 2</description>
    <label>Escalated To Level 2</label>
    <type>Checkbox</type>
</CustomField>