force-app/main/default/objects/Case/fields/Failed_Orders_source__c.field-meta.xml
<CustomField>
    <fullName>Failed_Orders_source__c</fullName>
    <description>This field is to know in a certain period which source led to high order failure</description>
    <label>Failed Orders&apos; source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile App Order</fullName>
            </value>
            <value>
                <fullName>Phone Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>