force-app/main/default/objects/Case/fields/Final_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Check_Date__c</fullName>
    <description>Menu Change - Final Change Date</description>
    <label>Final Check - Date</label>
    <type>DateTime</type>
</CustomField>