force-app/main/default/objects/Case/fields/First_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Check_Date__c</fullName>
    <label>First Check Date</label>
    <type>DateTime</type>
</CustomField>