force-app/main/default/objects/Case/fields/Flyer_Received__c.field-meta.xml
<CustomField>
    <fullName>Flyer_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the receive flyer</description>
    <label>Flyer Received</label>
    <type>Checkbox</type>
</CustomField>