force-app/main/default/objects/Case/fields/Further_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Further_Feedback__c</fullName>
    <label>Further Feedback</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educated on Invoices</fullName>
            </value>
            <value>
                <fullName>Educated on Partner Portal</fullName>
            </value>
            <value>
                <fullName>Educated on Ranking Score / Penalties</fullName>
            </value>
            <value>
                <fullName>Educated on Reviews</fullName>
            </value>
            <value>
                <fullName>Educated on Terminal</fullName>
            </value>
            <value>
                <fullName>Fixed Account Issues</fullName>
            </value>
            <value>
                <fullName>Fixed Technical Issues</fullName>
            </value>
            <value>
                <fullName>Happy with Competitor</fullName>
            </value>
            <value>
                <fullName>Menu Change</fullName>
            </value>
            <value>
                <fullName>Offers Applied</fullName>
            </value>
            <value>
                <fullName>Opening Times Changed</fullName>
            </value>
            <value>
                <fullName>Restaurant Referred for Branding/Menu</fullName>
            </value>
            <value>
                <fullName>Restaurant Referred for PP</fullName>
            </value>
            <value>
                <fullName>Terminal Support Requested</fullName>
            </value>
            <value>
                <fullName>Restaurant Not Cooperative</fullName>
            </value>
            <value>
                <fullName>Updated Contact Details</fullName>
            </value>
            <value>
                <fullName>Educated on Commission/Set-Up Fee</fullName>
            </value>
            <value>
                <fullName>Educated on 9Cookies</fullName>
            </value>
            <value>
                <fullName>Commission changed</fullName>
            </value>
            <value>
                <fullName>Order Transmission Method Change</fullName>
            </value>
            <value>
                <fullName>Educated on NPS</fullName>
            </value>
            <value>
                <fullName>Referred to Sales</fullName>
            </value>
            <value>
                <fullName>FSA Rating Requested</fullName>
            </value>
            <value>
                <fullName>Delivery Zones Updated</fullName>
            </value>
            <value>
                <fullName>Updated Delivery Settings</fullName>
            </value>
            <value>
                <fullName>Educated on Order Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>