force-app/main/default/objects/Case/fields/Google_Drive_photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_photo_URL__c</fullName>
    <description>As a Photographer/AM I want to easily access the photos i took/uploaded</description>
    <label>Google Drive photo URL</label>
    <type>Url</type>
</CustomField>