force-app/main/default/objects/Case/fields/GRID_fm__c.field-meta.xml
<CustomField>
    <fullName>GRID_fm__c</fullName>
    <formula>Account.GRID__c</formula>
    <label>GRID</label>
    <type>Text</type>
</CustomField>