force-app/main/default/objects/Case/fields/Handover__c.field-meta.xml
<CustomField>
    <fullName>Handover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.deliveryhero.com/browse/SP-2387</description>
    <label>Handover</label>
    <type>Checkbox</type>
</CustomField>