force-app/main/default/objects/Case/fields/Handover_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Case_Record_Type__c</fullName>
    <label>Handover Case Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DE Entry Case</fullName>
            </value>
            <value>
                <fullName>DE Finance Case</fullName>
            </value>
            <value>
                <fullName>DE Inbound Case</fullName>
            </value>
            <value>
                <fullName>DE Internal Case</fullName>
            </value>
            <value>
                <fullName>DE Restaurant Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>