force-app/main/default/objects/Case/fields/Impact_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Impact_Estimate__c</fullName>
    <description>Used for Feature request Cases</description>
    <label>Impact Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>