force-app/main/default/objects/Case/fields/is_m__c.field-meta.xml
<CustomField>
    <fullName>is_m__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used for tracking migration status</description>
    <label>is m</label>
    <type>Checkbox</type>
</CustomField>