force-app/main/default/objects/Case/fields/Is_the_restaurant_going_to_take_orders__c.field-meta.xml
<CustomField>
    <fullName>Is_the_restaurant_going_to_take_orders__c</fullName>
    <label>Is the restaurant going to take orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>