force-app/main/default/objects/Case/fields/IsAlreadyResolved__c.field-meta.xml
<CustomField>
    <fullName>IsAlreadyResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked for the first time when Case will be set to resolved to disable the Voucher tool to ensure that even if the status is changed again from Resolved to different status then also Voucher request tool will remain disabled.</description>
    <label>IsAlreadyResolved</label>
    <type>Checkbox</type>
</CustomField>