force-app/main/default/objects/Case/fields/IsCaseReasonUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsCaseReasonUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary flag to update to exclude the records already</description>
    <label>IsCaseReasonUpdated</label>
    <type>Checkbox</type>
</CustomField>