force-app/main/default/objects/Case/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <description>Used for feature request tickets</description>
    <label>Jira Link</label>
    <type>Url</type>
</CustomField>