force-app/main/default/objects/Case/fields/Key_VIP_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_VIP_Account__c</fullName>
    <description>SP-4241</description>
    <formula>AND(Account.Key_VIP_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key / VIP Account</label>
    <type>Checkbox</type>
</CustomField>