force-app/main/default/objects/Case/fields/Knowledge_Department_Formula__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Department_Formula__c</fullName>
    <formula>IF($Permission.Talabat_Partner_service_Knowledge, &quot;Talabat - Partner service&quot;,NULL)+
IF($Permission.Talabat_Back_office_Knowledge, &quot;Talabat - Back office&quot;,NULL)+
IF($Permission.Talabat_Live_chat_Knowledge, &quot;Talabat - Live chat&quot;,NULL)+
IF($Permission.APAC_Bengali_Knowledge,&quot;APAC - Bengali&quot;,NULL) +
IF($Permission.APAC_Burmese_Knowledge,&quot;APAC - Burmese&quot;,NULL) +
IF($Permission.APAC_Cantonese_Knowledge,&quot;APAC - Cantonese&quot;,NULL) +
IF($Permission.APAC_English_Knowledge,&quot;APAC - English&quot;,NULL) +
IF($Permission.APAC_Khmer_Knowledge,&quot;APAC - Khmer&quot;,NULL) +
IF($Permission.APAC_Lao_Knowledge,&quot;APAC - Lao&quot;,NULL) +
IF($Permission.APAC_Mandarin_Knowledge,&quot;APAC - Mandarin&quot;,NULL) +
IF($Permission.APAC_Thai_Knowledge,&quot;APAC - Thai&quot;,NULL) +
IF($Permission.APAC_Urdu_Knowledge,&quot;APAC - Urdu&quot;,NULL) +
IF($Permission.PedidosYa_Spanish_Knowledge,&quot;PedidosYa - Spanish&quot;,NULL)</formula>
    <label>Knowledge Department Formula</label>
    <type>Text</type>
</CustomField>