force-app/main/default/objects/Case/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <inlineHelpText>this field is populated when case has a task of type call.</inlineHelpText>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>