force-app/main/default/objects/Case/fields/Live_Chat_Transcript_Id__c.field-meta.xml
<CustomField>
    <fullName>Live_Chat_Transcript_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relationship used for linking chats to cases</description>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>