force-app/main/default/objects/Case/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Live Chat Transcript : Location</description>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>