force-app/main/default/objects/Case/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logo check</description>
    <label>Logo</label>
    <type>Checkbox</type>
</CustomField>