force-app/main/default/objects/Case/fields/Logo_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Logo_Creation_Date__c</fullName>
    <description>SP-1755 - date when the logo was uploaded to the menu online.</description>
    <label>Logo Creation Date</label>
    <type>Date</type>
</CustomField>