force-app/main/default/objects/Case/fields/Mark_up__c.field-meta.xml
<CustomField>
    <fullName>Mark_up__c</fullName>
    <label>Mark up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No mark-up</fullName>
            </value>
            <value>
                <fullName>In percentage</fullName>
            </value>
            <value>
                <fullName>In flat amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>