force-app/main/default/objects/Case/fields/Menu_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Menu_Change_Date__c</fullName>
    <label>Menu Change Date</label>
    <type>DateTime</type>
</CustomField>