force-app/main/default/objects/Case/fields/Menu_Type_Age__c.field-meta.xml
<CustomField>
    <fullName>Menu_Type_Age__c</fullName>
    <label>Menu Type Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>