force-app/main/default/objects/Case/fields/Menu_Typing_Details__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_Details__c</fullName>
    <description>SP-1708  This field allows the user to specify the effort of a Menu Processing / Menu Change</description>
    <label>Menu Typing Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MC PDE to PDE Copy</fullName>
            </value>
            <value>
                <fullName>MC LH to LH Copy</fullName>
            </value>
            <value>
                <fullName>MC PDE to LH Copy</fullName>
            </value>
            <value>
                <fullName>MC PDE small</fullName>
            </value>
            <value>
                <fullName>MC PDE medium</fullName>
            </value>
            <value>
                <fullName>MC PDE big / Neues Konzept</fullName>
            </value>
            <value>
                <fullName>MC LH small (bis 20 Min Plattform)</fullName>
            </value>
            <value>
                <fullName>MC LH medium (bis 60 Minuten)</fullName>
            </value>
            <value>
                <fullName>MC LH big / Neues Konzept</fullName>
            </value>
            <value>
                <fullName>MC LH Coca-Cola | PDE Coca-Cola</fullName>
            </value>
            <value>
                <fullName>MC LH Ben&amp; Jerrys | PDE Ben &amp; Jerrys</fullName>
            </value>
            <value>
                <fullName>MC LMIV research komplett + LMIV Migrator</fullName>
            </value>
            <value>
                <fullName>MC LMIV research + LMIV Migrator</fullName>
            </value>
            <value>
                <fullName>MC LMIV Migrator</fullName>
            </value>
            <value>
                <fullName>MP PDE Kompletteintragung</fullName>
            </value>
            <value>
                <fullName>MP PDE to PDE Copy / PDE to LH</fullName>
            </value>
            <value>
                <fullName>MP LH to LH Copy</fullName>
            </value>
            <value>
                <fullName>MP LH Kompletteintragung</fullName>
            </value>
            <value>
                <fullName>MP OC / WB / LMIV</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Layout change</fullName>
            </value>
            <value>
                <fullName>Prices change</fullName>
            </value>
            <value>
                <fullName>Remove or hide dish/menu category</fullName>
            </value>
            <value>
                <fullName>Add items/ toppings</fullName>
            </value>
            <value>
                <fullName>Add menu category</fullName>
            </value>
            <value>
                <fullName>Full menu</fullName>
            </value>
            <value>
                <fullName>Allergens Update</fullName>
            </value>
            <value>
                <fullName>Update menu settings</fullName>
            </value>
            <value>
                <fullName>Change/upload product photo</fullName>
            </value>
            <value>
                <fullName>Change/upload listing image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>