force-app/main/default/objects/Case/fields/Menu_Typing_Errors__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_Errors__c</fullName>
    <label>Menu Typing Errors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flavour set name too long</fullName>
            </value>
            <value>
                <fullName>Format issue</fullName>
            </value>
            <value>
                <fullName>Longer time than expected</fullName>
            </value>
            <value>
                <fullName>Missing flavour set</fullName>
            </value>
            <value>
                <fullName>Missing section</fullName>
            </value>
            <value>
                <fullName>Wrong item name</fullName>
                <label>Missing/Wrong item</label>
            </value>
            <value>
                <fullName>Wrong price</fullName>
            </value>
            <value>
                <fullName>Spelling Errors</fullName>
            </value>
            <value>
                <fullName>Incorrect Options</fullName>
            </value>
            <value>
                <fullName>Ignored Notes</fullName>
            </value>
            <value>
                <fullName>Incorrect Backend Set Up</fullName>
            </value>
            <value>
                <fullName>Disagreement on Typing Details</fullName>
            </value>
            <value>
                <fullName>Missing Description</fullName>
            </value>
            <value>
                <fullName>Wrong Deals</fullName>
            </value>
            <value>
                <fullName>Missing LMIV</fullName>
            </value>
            <value>
                <fullName>Wrong/Missing account set-up information</fullName>
            </value>
            <value>
                <fullName>Documents submitted incorrectly</fullName>
            </value>
            <value>
                <fullName>Design guide errors</fullName>
            </value>
            <value>
                <fullName>Incorrect Delivery</fullName>
            </value>
            <value>
                <fullName>Missing/Wrong description</fullName>
            </value>
            <value>
                <fullName>Minimum Amount</fullName>
            </value>
            <value>
                <fullName>Status of menu</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Missing/Wrong Size</fullName>
            </value>
            <value>
                <fullName>Fill in Arabic and English data correctly</fullName>
            </value>
            <value>
                <fullName>Missing itemWrong Item Name</fullName>
            </value>
            <value>
                <fullName>Delivery Time</fullName>
            </value>
            <value>
                <fullName>space /, / and capital first litter</fullName>
            </value>
            <value>
                <fullName>Municipal Tax text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>