force-app/main/default/objects/Case/fields/Menu_Typing_Rating__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_Rating__c</fullName>
    <label>Menu Typing Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>