force-app/main/default/objects/Case/fields/Menu_Upd_Mjr_Check__c.field-meta.xml
<CustomField>
    <fullName>Menu_Upd_Mjr_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Menu Update Major with Image Check if there is a parent on record avoid creating 2</description>
    <label>Menu Upd Mjr Check</label>
    <type>Checkbox</type>
</CustomField>