force-app/main/default/objects/Case/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <description>Stores the menu preview URL to be sent to Owner</description>
    <label>Menu URL</label>
    <type>Url</type>
</CustomField>