force-app/main/default/objects/Case/fields/MidasAPIException__c.field-meta.xml
<CustomField>
    <fullName>MidasAPIException__c</fullName>
    <label>MidasAPIException</label>
    <type>TextArea</type>
</CustomField>