force-app/main/default/objects/Case/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Live Chat Transcript : Name - Used this field since the other Name fields are related to contact object.</description>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>