force-app/main/default/objects/Case/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <label>Next Call Date</label>
    <type>DateTime</type>
</CustomField>