force-app/main/default/objects/Case/fields/Number_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contact__c</fullName>
    <description>Number of contact made</description>
    <label>Number of Contact</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>