force-app/main/default/objects/Case/fields/Number_of_edited_photos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_edited_photos__c</fullName>
    <description>added according SP-3849</description>
    <label>Number of edited photos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>