force-app/main/default/objects/Case/fields/Offline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Offline_Reason__c</fullName>
    <label>Offline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0% Contract Cancel request</fullName>
            </value>
            <value>
                <fullName>Best Price Guarantee</fullName>
            </value>
            <value>
                <fullName>Collection Issue</fullName>
            </value>
            <value>
                <fullName>Commission / Subscription too high</fullName>
            </value>
            <value>
                <fullName>Contract violation</fullName>
            </value>
            <value>
                <fullName>Data incomplete</fullName>
            </value>
            <value>
                <fullName>Disappointed by our business methods</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exclusive with competitor</fullName>
            </value>
            <value>
                <fullName>Failed in Upgrade</fullName>
            </value>
            <value>
                <fullName>High Failure Rate</fullName>
            </value>
            <value>
                <fullName>Incomplete Contract</fullName>
            </value>
            <value>
                <fullName>Legal Issue</fullName>
            </value>
            <value>
                <fullName>Lost to competition</fullName>
            </value>
            <value>
                <fullName>New Owner - New Contract</fullName>
            </value>
            <value>
                <fullName>New Owner - Will not continue contract</fullName>
            </value>
            <value>
                <fullName>No delievery Service</fullName>
            </value>
            <value>
                <fullName>Non Contracted Rest. - Phone Order offline</fullName>
            </value>
            <value>
                <fullName>Non Contracted Rest - 2nd rejection</fullName>
            </value>
            <value>
                <fullName>Not able to receive orders</fullName>
            </value>
            <value>
                <fullName>Not enough capacity</fullName>
            </value>
            <value>
                <fullName>Not enough orders</fullName>
            </value>
            <value>
                <fullName>Not interested in product</fullName>
            </value>
            <value>
                <fullName>Not satisfied with our product</fullName>
            </value>
            <value>
                <fullName>Quick Order Sticker</fullName>
            </value>
            <value>
                <fullName>Rejected the contract proposal from Sales team</fullName>
            </value>
            <value>
                <fullName>Rejected TTS(Text To Speech)</fullName>
            </value>
            <value>
                <fullName>Rejects Online Payment</fullName>
            </value>
            <value>
                <fullName>Restaurant Closed Permanently</fullName>
            </value>
            <value>
                <fullName>Restaurant closed temporarily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>