force-app/main/default/objects/Case/fields/Old_SF_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Status_c__c</fullName>
    <label>Old_SF_Status_c__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>