force-app/main/default/objects/Case/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Menu Issue</fullName>
            </value>
            <value>
                <fullName>Pending City Launch</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>